--- a/DreamVehicle.Web/Views/Home/Add.cshtml
+++ b/DreamVehicle.Web/Views/Home/Add.cshtml
@@ -1,5 +1,50 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model VehicleViewModel
+
+@{
+    ViewData["Title"] = "Добави нов автомобил";
 }
 
-<h2>Добави нов автомобил</h2>
+<h2>@ViewData["Title"]</h2>
+
+<div class="form">
+    <form method="post">
+        <div class="form-group">
+            <label asp-for="Model"></label>
+            <input asp-for="Model" class="form-control" />
+            <span asp-validation-for="Model" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="HorsePower"></label>
+            <input asp-for="HorsePower" class="form-control" />
+            <span asp-validation-for="HorsePower" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="ManufacturedYear"></label>
+            <input asp-for="ManufacturedYear" class="form-control" />
+            <span asp-validation-for="ManufacturedYear" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Importer"></label>
+            <input asp-for="Importer" class="form-control" />
+            <span asp-validation-for="Importer" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Description"></label>
+            <textarea asp-for="Description" class="form-control"></textarea>
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+
+        @if (!ViewData.ModelState.IsValid)
+            {
+            <div asp-validation-summary="All" class="alert alert-danger"></div>
+        }
+
+        <div class="form-group">
+            <button type="submit" class="btn">Добави в базата!</button>
+        </div>
+    </form>
+</div>
+
+@section Scripts {
+    @await Html.PartialAsync("_ValidationScriptsPartial")
+}
