--- a/DreamVehicle.Web/Views/_ViewImports.cshtml
+++ b/DreamVehicle.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using DreamVehicle.Web
 @using DreamVehicle.Web.Models
+@using static DreamVehicle.Web.Infrastructure.Constants.WebConstants
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
