--- a/DreamVehicle.Web/Views/Shared/_Layout.cshtml
+++ b/DreamVehicle.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Dream Vehicle</title>
+    <title>Автомобил мечта</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,22 +26,30 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Dream Vehicle</a>
+                <a asp-area="" asp-controller="Vehicle" asp-action="Index" class="navbar-brand">Автомобил мечта</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Add">Add</a></li>
+                    <li><a asp-area="" asp-controller="Vehicle" asp-action="Index">Търсене</a></li>
+                    <li><a asp-area="" asp-controller="Vehicle" asp-action="Add">Добавяне</a></li>
+                    <li><a asp-area="" asp-controller="Vehicle" asp-action="List">Автомобили</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <div class="container body-content">
+        @if (TempData.ContainsKey(TempDataSuccessMessageKey))
+        {
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="alert alert-success" id="success-alert">
+                        @TempData[TempDataSuccessMessageKey]
+                    </div>
+                </div>
+            </div>
+        }
+
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2018 - Dream Vehicle</p>
-        </footer>
     </div>
 
     <environment include="Development">
